0.4.7:
- General updates:
--- Implemented support for Starfinder v0.13.0's upcoming damage types update. (Works backwards compatible with Starfinder v0.12.1)
--- Marked VTTES plugin and PCGen XML as deprecated. These do not seem to be used (anymore), and aren't functional since the Foundry v0.8 update anyway.
- PAIZO Block updates:
--- Updated description parsing to no longer double-print "Description" header.
--- Updated special ability parsing to generate custom features for abilities that are not recognized by any compendia.
--- Improved critical parsing, it can now differentiate between DCs and damages.
--- Improved weaknesses parsing, it now properly checks the appropriate weakness if it is a standard weakness, and multiple special weaknesses are now concatenated by ; instead.
--- Improved immunities parsing, it now separates unrecognized immunities with ; instead of ,.

0.4.6:
- PAIZO Block updates:
--- Improved spellbook parsing, now assigns the proper spell level to the spell, and updates spells per day correctly again.
--- Fixed damage parsing on attacks.

0.4.5:
- PAIZO Block updates:
--- Fixed a freeze when parsing spells with a particular formatting style, using a — instead of a -.

0.4.4:
- General updates:
--- Added support for Starfinder v0.12.0's upcoming speed update. (Works backwards compatible with Starfinder v0.11.4)
- PAIZO Block updates:
--- Updated some more parsing behavior to work with Foundry v0.8 that was missed previously.
--- Fixed mistake in item data parsing causing attack roll bonus etc. to be set incorrectly.
--- Fixed battery parsing to work with battery name change.
--- Fixed a rare problem with telepathic creatures.

0.4.3:
- General updates:
--- Marked compatible with Foundry v0.8.8
--- Updated system entry from systems to system.

0.4.2:
- General updates:
--- Marked compatible with Foundry v0.8.7
--- Fixed test for actor creation permissions for clients.